--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
        class="w3-bar-item w3-button">Close Menu</a>
     <a href="/login" onclick="w3_close()" class="w3-bar-item w3-button">Login</a>
     <a href="/user/dashboard/" onclick="w3_close()" class="w3-bar-item w3-button">Dashboard</a>
-    <a href="/home" onclick="w3_close()" class="w3-bar-item w3-button">View all Service Providers </a>
+    <a href="/service-provider/all" onclick="w3_close()" class="w3-bar-item w3-button">View all Service Providers </a>
 
 </nav>
 
