cmmiting before creating branch

--- a/src/main/resources/templates/landing-page.html
+++ b/src/main/resources/templates/landing-page.html
@@ -159,11 +159,10 @@
     <div class="w3-third w3-serif">
       <h3>POPULAR TAGS</h3>
       <p>
-        <span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Dinner</span>
-        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Salmon</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">France</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Drinks</span>
-        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Flavors</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Cuisine</span>
-        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Chicken</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Dressing</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Fried</span>
-        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Fish</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Duck</span>
+        <span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Italian Citizenship</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Italian Genealogy</span>
+        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Become Italian</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Dual Citizenship</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Italian Heritage</span>
+        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Jure Sanguinis</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">EU Passport</span>
+        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Citizenship by blood</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">EU Citizenship</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Italian Citizenship Service Providers</span>
       </p>
     </div>
   </footer>
