--- a/src/main/resources/templates/service-provider.html
+++ b/src/main/resources/templates/service-provider.html
@@ -33,7 +33,6 @@
 </div>
     <div class="service-provider-container" style="max-width:1200px;margin-top:100px;margin-left: 10px">
         <div th:if="${serviceProvider.name != null}">
-            <h1>Edit a Service Provider</h1>
             <form th:action="@{/service-provider/{serviceProviderId}(serviceProviderId=${serviceProvider.serviceProviderId})}" method="post">
                 <h3><b>Service Provider: </b><span th:text="${serviceProvider.name}"></span></h3>
                 <h5><b>Description: </b><span th:text="${serviceProvider.description}"></span></h5>
@@ -43,11 +42,6 @@
                             <p><b><span th:text="${review.title}"></span></b></p>
                             <p><span th:text="${review.content}"></span></p>
                             <p class="rating" th:text="${review.rating}"><b></b></p>
-                            <form th:action="@{'/review/' + ${review.reviewId}}" method="post">
-                                <div th:if="${user != null}">
-                                    <button th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" type="submit">Delete review</button>
-                                </div>
-                            </form>
                         </li>
                     </ul>
 
@@ -94,11 +88,10 @@
     <div class="w3-third w3-serif">
         <h3>POPULAR TAGS</h3>
         <p>
-            <span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Dinner</span>
-            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Salmon</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">France</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Drinks</span>
-            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Flavors</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Cuisine</span>
-            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Chicken</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Dressing</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Fried</span>
-            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Fish</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Duck</span>
+            <span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Italian Citizenship</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Italian Genealogy</span>
+            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Become Italian</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Dual Citizenship</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Italian Heritage</span>
+            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Jure Sanguinis</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">EU Passport</span>
+            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Citizenship by blood</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">EU Citizenship</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Italian Citizenship Service Providers</span>
         </p>
     </div>
 </footer>
