--- a/src/main/resources/templates/landing-page.html
+++ b/src/main/resources/templates/landing-page.html
@@ -3,16 +3,12 @@
       <head>
 
       <title>Italian Citizenship Reviews</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-
-        <style>
-    body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
-    .w3-bar-block .w3-bar-item {padding:20px}
-  </style>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+      <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -31,7 +27,7 @@
   <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
     <div class="w3-right w3-padding-16" style="margin-right: 10px">Contact</div>
-    <div class="w3-center w3-padding-16">Italian Citizenship Review</div>
+    <div class="w3-center w3-padding-16" id="go-home"><a href="/" style="">Italian Citizenship Review</a></div>
   </div>
 </div>
 
@@ -75,45 +71,7 @@
       </div>
     </div>
   </div>
-  <div class="w3-row-padding w3-padding-16 w3-center" id="service-providers2">
-      <div class="w3-col s12 m6 l3">
-        <div class="w3-card-4">
-          <div class="w3-container">
-            <h3></h3>
-            <p></p>
-            <h3 class="rating"></h3>
-          </div>
-        </div>
-      </div>
-      <div class="w3-col s12 m6 l3">
-        <div class="w3-card-4">
-          <div class="w3-container">
-            <h3></h3>
-            <p></p>
-            <h3 class="rating"></h3>
-          </div>
-        </div>
-      </div>
-      <div class="w3-col s12 m6 l3">
-        <div class="w3-card-4">
-          <div class="w3-container">
-            <h3></h3>
-            <p></p>
-            <h3 class="rating"></h3>
-          </div>
-        </div>
-      </div>
-      <div class="w3-col s12 m6 l3">
-        <div class="w3-card-4">
-          <div class="w3-container">
-            <h3></h3>
-            <p></p>
-            <h3 class="rating"></h3>
-          </div>
-        </div>
-      </div>
-  </div>
-</div>
+  <button id="load-more-button">Load More</button>
 
   <hr id="about">
 
@@ -181,11 +139,6 @@
   }
 </script>
 <script src="/js/landing-page.js"></script>
-</body>
-</html>
-</title>
-</head>
-<body>
-
+<script src="/js/directory.js"></script>
 </body>
 </html>
