--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-
     <title>Italian Citizenship Reviews</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
-    <style>
-        body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
-        .w3-bar-block .w3-bar-item {padding:20px}
-    </style>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
@@ -29,7 +25,7 @@
     <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
         <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
         <div class="w3-right w3-padding-16" style="margin-right: 10px">Contact</div>
-        <div class="w3-center w3-padding-16">Italian Citizenship Review</div>
+        <div class="w3-center w3-padding-16" id="go-home"><a href="/">Italian Citizenship Review</a></div>
     </div>
 </div>
     <h2 style="margin-top: 100px">Login</h2>
