--- a/src/main/resources/templates/service-provider.html
+++ b/src/main/resources/templates/service-provider.html
@@ -7,10 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
-    <style>
-        body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
-        .w3-bar-block .w3-bar-item {padding:20px}
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
@@ -25,10 +23,11 @@
 
 <!-- Top menu -->
 <div class="w3-top">
-    <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
+    <div class="w3-white w3-xlarge" style="max-width:1200px; margin:auto">
         <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
         <div class="w3-right w3-padding-16" style="margin-right: 10px">Contact</div>
-        <div class="w3-center w3-padding-16">Italian Citizenship Review</div>
+        <div class="w3-center w3-padding-16" id="go-home"><a href="/">Italian Citizenship Review</a></div>
+
     </div>
 </div>
     <div class="service-provider-container" style="max-width:1200px;margin-top:100px;margin-left: 10px">
@@ -36,12 +35,15 @@
             <form th:action="@{/service-provider/{serviceProviderId}(serviceProviderId=${serviceProvider.serviceProviderId})}" method="post">
                 <h3><b>Service Provider: </b><span th:text="${serviceProvider.name}"></span></h3>
                 <h5><b>Description: </b><span th:text="${serviceProvider.description}"></span></h5>
+
+                <p class="rating" th:text="${serviceProvider.avgRating}"> </p>
                 <div th:if="${serviceProvider.reviews.size() != 0}" id="reviewList" style="border-style: solid ">
                     <ul>
                         <li th:each="review : ${serviceProvider.reviews}">
                             <p><b><span th:text="${review.title}"></span></b></p>
                             <p><span th:text="${review.content}"></span></p>
-                            <p class="rating" th:text="${review.rating}"><b></b></p>
+
+                            <p class="rating"  th:text="${review.rating}"></p>
                         </li>
                     </ul>
 
@@ -67,7 +69,6 @@
     <div class="w3-third">
         <h3>FOOTER</h3>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </div>
 
     <div class="w3-third">
@@ -95,6 +96,7 @@
         </p>
     </div>
 </footer>
+<script src="/js/directory.js"></script>
 <script>
     // Script to open and close sidebar
     function w3_open() {
@@ -105,6 +107,6 @@
         document.getElementById("mySidebar").style.display = "none";
     }
 </script>
-<script src="/js/directory.js"></script>
+
 </body>
 </html>
