--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,82 +14,86 @@
 <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
     <a href="javascript:void(0)" onclick="w3_close()"
        class="w3-bar-item w3-button">Close Menu</a>
-    <a href="/login" onclick="w3_close()" class="w3-bar-item w3-button">Login</a>
-    <a href="/user/dashboard/" onclick="w3_close()" class="w3-bar-item w3-button">Dashboard</a>
-    <a href="/service-provider/all" onclick="w3_close()" class="w3-bar-item w3-button">View all Service Providers </a>
-
+    <a href="/user/dashboard/" onclick="w3_close()" class="w3-bar-item w3-button">User Dashboard</a>
+    <a href="/service-provider/all" onclick="w3_close()" class="w3-bar-item w3-button">All Service Providers </a>
 </nav>
 
 <!-- Top menu -->
 <div class="w3-top">
     <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
         <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
-        <div class="w3-right w3-padding-16" style="margin-right: 10px">Contact</div>
+        <div class="w3-right w3-padding-16" style="margin-right: 10px"><a href="/login">Login</a></div>
         <div class="w3-center w3-padding-16" id="go-home"><a href="/">Italian Citizenship Review</a></div>
     </div>
 </div>
-    <h2 style="margin-top: 100px">Login</h2>
-        <form action="/login" method="post">
-            <div>
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required><br><br>
-            </div>
+<div id="login-form">
+    <h4>Log in or register to leave reviews and join our community of Italian citizenship enthusiasts.</h4>
+    <div class="form-container">
+        <h2>Login</h2>
+            <form action="/login" method="post">
+                <div>
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username" required><br><br>
+                </div>
 
-            <div>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required><br><br>
-            </div>
-            <button type="submit">Login</button>
+                <div>
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required><br><br>
+                </div>
+                <div class="button-group">
+                    <button type="submit">Login</button>
+                    <button action="/logout" style="margin-left: 10px;" >Logout </button>
+                </div>
+            </form>
+    </div>
+    <div class="form-container">
+        <h2>Register</h2>
+            <form th:action="@{/register}" method="post">
+                <div>
+                    <label for="username">Username:</label>
+                    <input type="text" id="register-username" name="username" required/><br><br>
+                </div>
+                <script>
+                    const input = document.getElementById('register-username');
+                    input.addEventListener('blur', function() {
+                        const username = input.value;
 
+                        if(input.value != '') {
+                        // Make a request to the server to check if the username exists
+                        fetch('rest/user/exists/' + username)
+                            .then(response => response.json())
+                            .then(data => {
+                                if (data) {
+                                    // Username exists
+                                    alert('Username already exists');
+                                } else {
+                                    // Username does not exist
+                                    console.log('Username is available');
+                                }
+                            })
+                            .catch(error => {
+                                console.error('Error checking username:', error);
+                            });
+                        }
+                    });
 
-        </form>
-    <button action="/logout" >Logout </button>
-    <h2>Register</h2>
-        <form th:action="@{/register}" method="post">
-            <div>
-                <label for="username">Username:</label>
-                <input type="text" id="register-username" name="username" required/><br><br>
-            </div>
-            <script>
-                const input = document.getElementById('register-username');
-                input.addEventListener('blur', function() {
-                    const username = input.value;
-
-                    if(input.value != '') {
-                    // Make a request to the server to check if the username exists
-                    fetch('rest/user/exists/' + username)
-                        .then(response => response.json())
-                        .then(data => {
-                            if (data) {
-                                // Username exists
-                                alert('Username already exists');
-                            } else {
-                                // Username does not exist
-                                console.log('Username is available');
-                            }
-                        })
-                        .catch(error => {
-                            console.error('Error checking username:', error);
-                        });
-                    }
-                });
-
-            </script>
-            <div>
-                <label for="password">Password:</label>
-                <input type="password" id="register-password" name="password" required/><br><br>
-            </div>
-            <div>
-                <label>Role:</label>
-                <input type="radio" id="user" name="role" value="ROLE_USER" checked>
-                <label for="user">User</label>
-                <input type="radio" id="admin" name="role" value="ROLE_ADMIN">
-                <label for="admin">Admin</label>
-                <br><br>
-            </div>
-            <button type="submit">Register</button>
-        </form>
-    <h2> You should write something like about why you should sign up as well as what there is to offer if you sign-up.</h2>
+                </script>
+                <div>
+                    <label for="password">Password:</label>
+                    <input type="password" id="register-password" name="password" required/><br><br>
+                </div>
+                <div>
+                    <label>Role:</label>
+                    <input type="radio" id="user" name="role" value="ROLE_USER" checked>
+                    <label for="user">User</label>
+                    <input type="radio" id="admin" name="role" value="ROLE_ADMIN">
+                    <label for="admin">Admin</label>
+                    <br><br>
+                </div>
+                <button type="submit">Register</button>
+            </form>
+    </div>
+</div>
 <!-- Footer -->
 <footer class="w3-row-padding w3-padding-32">
     <div class="w3-third">
