--- a/src/main/resources/templates/directory.html
+++ b/src/main/resources/templates/directory.html
@@ -22,7 +22,8 @@
 <div class="w3-top">
     <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
         <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
-        <div class="w3-right w3-padding-16" style="margin-right: 10px"><a href="/login">Login</a></div>
+        <div th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" class="w3-right w3-padding-16" style="margin-right: 10px"><a href="/logout">Logout</a></div>
+        <div th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" class="w3-right w3-padding-16" style="margin-right: 10px"><a href="/login">Login</a></div>
         <div class="w3-center w3-padding-16" id="go-home"><a href="/">Italian Citizenship Review</a></div>
     </div>
 </div>
@@ -30,7 +31,7 @@
 <h4>Can't find your Italian Citizenship Service Provider? Add it <a href="/service-provider">here </a></h4>
 
     <div th:each="serviceProvider, stat : ${serviceProviders}" th:id="${stat.index}">
-        <div style="border-style: solid; margin-left: 10px; margin-right: 10px">
+        <div style="border-style: solid; margin-left: 10px; margin-right: 10px; margin-bottom: 10px">
             <div>
                 <div class="service-provider" style="margin-left: 10px">
                     <input type="hidden" th:id="'serviceProvider-' + ${stat.index}" th:value="${serviceProvider.serviceProviderId}" />
@@ -39,7 +40,7 @@
                     <p class="rating" th:text="${serviceProvider.avgRating}"></p>
                     <h3>Reviews</h3>
                     </div>
-                        <div th:if="${serviceProvider.reviews.size() != 0}" id="reviewList" style="border-style: solid ">
+                        <div th:if="${serviceProvider.reviews.size() != 0}" id="reviewList" style="border-style: solid;">
                             <ul>
                                 <li th:each="review : ${serviceProvider.reviews}">
                                     <p><b><span th:text="${review.title}"></span></b></p>
@@ -74,7 +75,7 @@
                                 <option value="5">5</option>
                             </select>
 
-                                <button type="submit" onclick="createReview(event)" th:data-index="${stat.index}">Update Review</button>
+                                <button type="submit" onclick="createReview(event)" th:data-index="${stat.index}">Add Review</button>
                         </form>
                         <br>
                     </div>
@@ -87,7 +88,7 @@
         </div>
     </div>
     <br><br>
-    <form action="/service-provider" method="get" id="add-service-provider">
+    <form action="/service-provider" method="get" id="add-service-provider" style="margin-left: 20px">
         <button type="submit">Add a service provider</button>
     </form>
 <!-- Footer -->
