--- a/src/main/resources/templates/service-provider.html
+++ b/src/main/resources/templates/service-provider.html
@@ -30,6 +30,7 @@
 
     </div>
 </div>
+<div th:if="${serviceProvider.name != null}">
     <div class="service-provider-container" style="max-width:1200px;margin-top:100px;margin-left: 10px">
         <div>
             <div style="border-style: solid; margin-left: 10px; margin-right: 10px; margin-bottom: 10px">
@@ -86,17 +87,28 @@
             </div>
         </div>
     </div>
-        <div th:if="${serviceProvider.name == null}">
-            <h1>Add a Service Provider</h1>
-            <form action="/service-provider" method="post">
-                <label for="edit-name">Name: </label><br><br>
-                <input type="text" id="edit-name" name="name" required/><br><br>
-                <label for="edit-description">Description: </span></label><br><br>
-                <textarea name="description" id="edit-description" required style="font-family: Arial, sans-serif;"></textarea><br><br>
-                <button type="submit">Update Service Provider</button>
-            </form>
+</div>
+<div th:if="${serviceProvider.name == null }">
+    <div th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}">
+            <h1 style="margin-top: 100px">Add a Service Provider</h1>
+                <div style="margin: 10px">
+
+                        <form  id="service-provider-form" action="/service-provider" method="post" style="border-style: solid;">
+                            <div style="margin: 10px">
+                                <label for="edit-name">Name: </label><br><br>
+                                <input type="text" id="edit-name" name="name" required/><br><br>
+                                <label for="edit-description">Description: </span></label><br><br>
+                                <textarea name="description" id="edit-description" required style="font-family: Arial, sans-serif;"></textarea><br><br>
+                                <button type="submit" style="margin-bottom: 10px">Add Service Provider</button>
+                            </div>
+                        </form>
+                </div>
+        </div>
+        <div style="margin: 100px; border-style: solid" th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}">
+            <b><a href="/login">Login</a> to create a service provider!</b>
         </div>
     </div>
+</div>
 <!-- Footer -->
 <footer class="w3-row-padding w3-padding-32">
     <div class="w3-third">
