can officially see review after submitting done by JS dynamically

--- a/src/main/resources/templates/directory.html
+++ b/src/main/resources/templates/directory.html
@@ -75,7 +75,7 @@
                                 <option value="5">5</option>
                             </select>
 
-                                <button type="submit" onclick="createReview(event)" th:data-index="${stat.index}">Add Review</button>
+                                <button type="submit" onclick="createReview(event)" th:data-index="${stat.index}" style="margin-top: 10px">Add Review</button>
                         </form>
                         <br>
                     </div>
