--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,7 +31,7 @@
             }
             @media (max-width: 500px) {
                 #go-home {
-                    display: flex;
+                    display: none;
                 }
                 #menu {
                     display: none;
