--- a/src/main/resources/templates/service-provider.html
+++ b/src/main/resources/templates/service-provider.html
@@ -29,7 +29,7 @@
             }
             @media (max-width: 500px) {
                 #go-home {
-                    display: flex;
+                    display: none;
                 }
                 #menu {
                     display: none;
