--- a/src/main/resources/templates/landing-page.html
+++ b/src/main/resources/templates/landing-page.html
@@ -91,7 +91,7 @@
   <hr id="about">
 
   <!-- About Section -->
-  <div class="w3-container w3-padding-32 w3-center">
+  <div class="w3-padding-32 w3-center">
     <h3>Discover Italian Citizenship Service Providers</h3>
     <div class="w3-padding-32">
       <h4><b>Experience A Seamless Journey to Italian Citizenship</b></h4>
