--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -15,6 +15,8 @@
     <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button">Close Menu</a>
     <a href="/user/dashboard/" onclick="w3_close()" class="w3-bar-item w3-button">User Dashboard</a>
     <a href="/service-provider/all" onclick="w3_close()" class="w3-bar-item w3-button">All Service Providers</a>
+    <a href="/" onclick="w3_close()" class="w3-bar-item w3-button">Home</a>
+
 </nav>
 
 
