--- a/src/main/resources/templates/landing-page.html
+++ b/src/main/resources/templates/landing-page.html
@@ -54,7 +54,7 @@
       <div class="w3-card-4" style="margin-bottom: 10px">
         <div class="w3-container">
           <h3></h3>
-          <p></p>
+          <p class="card-description"></p>
           <h3 class="rating"></h3>
         </div>
       </div>
@@ -63,7 +63,7 @@
       <div class="w3-card-4" style="margin-bottom: 10px">
         <div class="w3-container">
           <h3></h3>
-          <p></p>
+          <p class="card-description"></p>
           <h3 class="rating"></h3>
         </div>
       </div>
@@ -72,7 +72,7 @@
       <div class="w3-card-4">
         <div class="w3-container">
           <h3></h3>
-          <p></p>
+          <p class="card-description"></p>
           <h3 class="rating"></h3>
         </div>
       </div>
@@ -81,7 +81,7 @@
       <div class="w3-card-4">
         <div class="w3-container">
           <h3></h3>
-          <p></p>
+          <p class="card-description"></p>
           <h3 class="rating"></h3>
         </div>
       </div>
