--- a/src/main/resources/static/css/style2.css
+++ b/src/main/resources/static/css/style2.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Monteserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   background-color: #fff;
   height: 200vh;
   position: relative; }
@@ -27,8 +27,8 @@ p {
   font-weight: 300; }
 
 h1, h2, h3, h4, h5, h6,
-.h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
+.h1, .h2, .h3, .h4, .h5, .h6  {
+  font-family: "Monteserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
 
 a {
   -webkit-transition: .3s all ease;
@@ -62,7 +62,7 @@ a {
 .hero-headline {
   font-size: 3rem;
   color: #ffffff;
-  font-family: "Quicksand-bold", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Italiana-bold", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* Add any other styles for your headline */
 }
 
@@ -78,14 +78,18 @@ a {
     @media (max-width: 1100px) {
       .site-navbar .container-fluid {
         padding-left: 15px;
-        padding-right: 15px; } }
+        padding-right: 0px; } }
   .site-navbar .site-logo {
     position: absolute;
-    left: 5%; }
+    left: 5%;
+  }
     @media (max-width: 1100px) {
       .site-navbar .site-logo {
         position: relative;
         left: auto; } }
+      #title-anchor {
+        color: white;
+      }
     .site-navbar .site-logo a {
       color: #fff;
       font-size: 1.5rem;
@@ -479,11 +483,11 @@ a {
 
 .btn.btn-primary {
   color: #fff;
-  background: #89ba16;
-  border-color: #89ba16; }
+  background: #CD212A;
+  border-color: #CD212A; }
   .btn.btn-primary:hover {
-    background: #90c317;
-    border-color: #90c317; }
+    background: #dd2b34;
+    border-color: #dd2b34; }
 
 .btn.btn-outline-white {
   background: transparent;
@@ -499,4 +503,121 @@ a {
   .btn.btn-outline-primary:hover {
     color: #fff;
     background: #89ba16; }
+#title-anchor {
+  font-family: Italiana;
+}
 
+.accordion-style .card {
+  background: transparent;
+  box-shadow: none;
+  margin-bottom: 15px;
+  margin-top: 0 !important;
+  border: none;
+}
+.accordion-style .card:last-child {
+  margin-bottom: 0;
+}
+.accordion-style .card-header {
+  border: 0;
+  background: none;
+  padding: 0;
+  border-bottom: none;
+}
+.accordion-style .btn-link {
+  color: #dd2b34;
+  position: relative;
+  display: block;
+  width: 100%;
+  text-align: left;
+  white-space: normal;
+  box-shadow: none;
+  padding: 15px 55px;
+  text-decoration: none;
+}
+.mx-auto {
+  margin-right: auto !important;
+  margin-left: auto !important;
+}
+.rounded {
+  border-radius: 0.25rem !important;
+}
+img {
+  max-width: 100%;
+  height: auto;
+  vertical-align: top;
+}
+.accordion-style .btn-link:hover {
+  text-decoration: none;
+}
+.accordion-style .btn-link.collapsed {
+  color: #575a7b;
+}
+.accordion-style .btn-link.collapsed:after {
+  content: "+";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  font-size: 1rem;
+  color: #dd2b34;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(-50%);
+  box-shadow: 8px 8px 30px 0 rgba(0, 0, 0, 0.12);
+}
+.accordion-style .btn-link:after {
+  content: "-";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  font-size: 1rem;
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #dd2b34;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(-50%);
+  box-shadow: 8px 8px 30px 0 rgba(0, 0, 0, 0.12);
+}
+.accordion-style  {
+  padding-top: 0px;
+  padding-left: 3.5rem;
+  padding-bottom: 0;
+}
+.accordion-style .card-body:before {
+  position: absolute;
+  content: "";
+  border-width: 0 0 0 1.2px;
+  border-color: #dd2b34;
+  left: 20px;
+  top: 0;
+  z-index: 1;
+  bottom: 0;
+}
+@media screen and (max-width: 767px) {
+  .accordion-style .btn-link {
+    padding: 15px 40px 15px 55px;
+  }
+}
+@media screen and (max-width: 575px) {
+  .accordion-style .btn-link {
+    padding: 15px 30px 15px 55px;
+  }
+}
+
+#title-benefits {
+  font-family: Italiana;
+  color: #89ba16;
+}
+
+#header {
+  font-family: Italiana;
+  color: #89ba16;
+}
