Added lots of new stuff

--- a/src/main/resources/static/css/style2.css
+++ b/src/main/resources/static/css/style2.css
@@ -54,6 +54,7 @@ a {
   height: 100%;
   padding: 50px;
   padding-top: 200px;
+
   background-color: rgba(0, 0, 0, 0.5);
 
 
@@ -600,6 +601,7 @@ img {
   top: 0;
   z-index: 1;
   bottom: 0;
+  padding: 20px;
 }
 @media screen and (max-width: 767px) {
   .accordion-style .btn-link {
@@ -620,4 +622,188 @@ img {
 #header {
   font-family: Italiana;
   color: #89ba16;
+}
+
+.process-box{
+  background: #fff;
+  padding: 10px;
+  border-radius: 15px;
+  position: relative;
+  box-shadow: 2px 2px 7px 0 #00000057;
+  margin-top: 20px;
+
+}
+.process-left:after{
+  content: "";
+  border-top: 15px solid #ffffff;
+  border-bottom: 15px solid #ffffff;
+  border-left: 15px solid #ffffff;
+  border-right: 15px solid #ffffff;
+  display: inline-grid;
+  position: absolute;
+  right: -15px;
+  top: 42%;
+  transform: rotate(45deg);
+  box-shadow: 3px -2px 3px 0px #00000036;
+  z-index: 1;
+}
+.process-right:after{
+  content: "";
+  border-top: 15px solid #ffffff00;
+  border-bottom: 15px solid #ffffff;
+  border-left: 15px solid #ffffff;
+  border-right: 15px solid #ffffff00;
+  display: inline-grid;
+  position: absolute;
+  left: -15px;
+  top: 42%;
+  transform: rotate(45deg);
+  box-shadow: -1px 1px 3px 0px #0000001a;
+  z-index: 1;
+}
+.process-step{
+  background: #dd2b34;
+  text-align: center;
+  width: 80%;
+  margin: 0 auto;
+  color: #fff;
+  height: 100%;
+  padding-top: 8px;
+  position: relative;
+  top: -26px;
+  border-radius: 0px 0px 10px 10px;
+  box-shadow: -6px 8px 0px 0px #00000014;
+}
+.process-point-right{
+  background: #ffffff;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border: 8px solid #dd2b34;
+  box-shadow: 0 0 0px 4px #5c5c5c;
+  margin: auto 0;
+  position: absolute;
+  bottom: 40px;
+  left: -63px;
+}
+.process-point-right:before{
+  content: "";
+  height: 144px;
+  width: 11px;
+  background: #5c5c5c;
+  display: inline-grid;
+  transform: rotate(36deg);
+  position: relative;
+  left: -50px;
+  top: -0px;
+}
+.process-point-left{
+  background: #ffffff;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border: 8px solid #dd2b34;
+  box-shadow: 0 0 0px 4px #5c5c5c;
+  margin: auto 0;
+  position: absolute;
+  bottom: 40px;
+  right: -63px;
+}
+.process-point-left:before {
+  content: "";
+  height: 144px;
+  width: 11px;
+  background: #5c5c5c;
+  display: inline-grid;
+  transform: rotate(-38deg);
+  position: relative;
+  left: 50px;
+  top: 0px;
+
+}
+
+.process-last:before{
+  display: none;
+}
+.process-box p{
+  z-index: 9;
+}
+.process-step p{
+  font-size: 20px;
+}
+.process-step h2{
+  font-size: 39px;
+}
+.process-step:after{
+  content: "";
+  border-top: 8px solid #04889800;
+  border-bottom: 8px solid #dd2b34;
+  border-left: 8px solid #04889800;
+  border-right: 8px solid #dd2b34;
+  display: inline-grid;
+  position: absolute;
+  left: -16px;
+  top: 0;
+}
+.process-step:before{
+  content: "";
+  border-top: 8px solid #ff000000;
+  border-bottom: 8px solid #dd2b34;
+  border-left: 8px solid #dd2b34;
+  border-right: 8px solid #ff000000;
+  display: inline-grid;
+  position: absolute;
+  right: -16px;
+  top: 0;
+}
+.process-line-l{
+  background: white;
+  height: 4px;
+  position: absolute;
+  width: 136px;
+  right: -153px;
+  top: 64px;
+  z-index: 9;
+}
+.process-line-r{
+  background: white;
+  height: 4px;
+  position: absolute;
+  width: 136px;
+  left: -153px;
+  top: 63px;
+  z-index: 9;
+}
+
+#qualify {
+  background-color: #f2f2f2;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+/* Style for the select dropdown */
+.select-wrapper {
+  margin-bottom: 10px;
+}
+
+/* Style for the disclaimer */
+.qualify-block__disclaimer {
+  font-style: italic;
+  color: gray;
+  margin-bottom: 10px;
+}
+
+/* Style for the description blocks */
+.qualify-block__description {
+  margin-bottom: 10px;
+  display: none;
+  padding: 10px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+/* Show the selected description block */
+.qualify-block__description.active {
+  display: block;
 }
